--- a/blocks/package.json
+++ b/blocks/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "blocks",
 	"version": "0.1.0",
-	"description": "Example static block scaffolded with Create Block tool.",
-	"author": "The WordPress Contributors",
+	"description": "Blocks for FIM Ministries",
+	"author": "Melissa Hiatt",
 	"license": "GPL-2.0-or-later",
 	"main": "build/index.js",
 	"scripts": {
@@ -14,7 +14,8 @@
 		"plugin-zip": "wp-scripts plugin-zip",
 		"start": "wp-scripts start"
 	},
-	"devDependencies": {
-		"@wordpress/scripts": "^24.3.0"
+	"dependencies": {
+		"@wordpress/api-fetch": "^6.17.0",
+		"@wordpress/scripts": "^24.4.0"
 	}
 }
